<resources>
    <string name="app_name">FinanceTrackerEX3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="WelcomeBack">Welcome Back</string>
    <string name="getstart">Get Started</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="singup">Sing Up</string>
    <string name="ForgotPas">Forgot Password?</string>
    <string name="CreateAccount">Create Account</string>
    <string name="EnterEmail">Enter your email</string>
    <string name="RetrievePassword">Retrieve Password</string>
    <string name="CategorySummary">Category Summary</string>
    <string name="addtrans">Add Transaction</string>
    <string name="Title">Title</string>
    <string name="amount">amount</string>
    <string name="Date">Date</string>
    <string name="add">Add</string>
    <string name="mytrans">My Transaction</string>
    <string name="Settings">Settings</string>
    <string name="updateTrancs">Update Transaction</string>
    <string name="saveCurr">Save Currency</string>
    <string name="SaveBudget">Save Budget</string>
    <string name="exportData">Export Dara</string>
    <string name="importData">Import Data</string>
    <string name="Logout">Logout</string>


    <string-array name="Category">
        <item>Select</item>
        <item>FoodDining</item>
        <item>Transportation</item>
        <item>Groceries</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Healthcare</item>
        <item>Shopping</item>
        <item>Education</item>
        <item>Travel</item>
        <item>Rent</item>
        <item>Investment</item>
        <item>Others</item>
    </string-array>


</resources>